*Empty MediaWiki Message*

--- a/Abanɣu.mw
+++ b/Abanɣu.mw
@@ -16,7 +16,16 @@ Abanɣu d yiwen gar [[timsuṭad|temsuṭad]] i zeddiɣ (mazal) llan ttidiren de
 Yettwassen ubanɣu s tafekka-ynes [[Awlellu|tawlellayt]] ur nli (ur nesɛi) [[acebbub|azar]] d yiṭarren-is meẓẓiyen d ubleɣ-it acafcal, ɣas akken s ila isefka ayi akk ara ad tyeǧǧen d azayan d agezlan maca yezmer ad yazzel ugar n wemdan, Anda tazzla-ynes tettaweṭ ar 50 km/[[tasragt|ts]]
 
 == Aẓaṛ d usismel ==
+'''Asismel''' <br/>
+Abanɣu d yiwen gar snat n telmas id yegran deg [[tawacult (tasnudert)|twacult]] n [[Tizamurin|izamuren]], Dɣa tawacult-a n izamuren tettwasismel (yakk d [[tid tfenza]]) deg [[tafesna (tasnudert)|tafesna]] d [[tisenfednin|tsenfednin]] dgi llan iɣersiwen [[Timestuga|imestuga]] n iden am [[alɣem|ulɣem]] d [[afunas|tfunasin]] d [[izerzer]] d [[ilef|yilfan]], ɣas akken abanɣu ur yettwaqqen ara s wassaɣ yuddsen (ijehden) ar telmas-a 
+
+'''Tamhazt n telmest-a'''
+
+== Ẓeṛ daɣen ==
+* [[Abanɣu agezlan|Azamur agezlan]]
+
 [[Category:Aɣersiw]]
+[[Category:Tisenfednin]]
 [[Category:iɣersiwen]]
 [[Category:timsuṭad]]
 [[Category:iɣersiwen n Tefriqt]]
