*Empty MediaWiki Message*

--- a/Abanɣu.mw
+++ b/Abanɣu.mw
@@ -19,7 +19,10 @@ Yettwassen ubanɣu s tafekka-ynes [[Awlellu|tawlellayt]] ur nli (ur nesɛi) [[ac
 '''Asismel''' <br/>
 Abanɣu d yiwen gar snat n telmas id yegran deg [[tawacult (tasnudert)|twacult]] n [[Tizamurin|izamuren]], Dɣa tawacult-a n izamuren tettwasismel (yakk d [[tid tfenza]]) deg [[tafesna (tasnudert)|tafesna]] d [[tisenfednin|tsenfednin]] dgi llan iɣersiwen [[Timestuga|imestuga]] n iden am [[alɣem|ulɣem]] d [[afunas|tfunasin]] d [[izerzer]] d [[ilef|yilfan]], ɣas akken abanɣu ur yettwaqqen ara s wassaɣ yuddsen (ijehden) ar telmas-a 
 
-'''Tamhazt n telmest-a'''
+'''Tamhazt n telmest-a''' <br/>
+Tizrawin titrarin ɣef uẓar n twacult n [[Tizamurin|Tizamurin]] ssknen-t-d d akken abanɣu yezdi yakk d [[tizemkiyin]] deg yiwen n [[aẓaṛ amezday|uẓar imezdi]] [[tikelmanin|akelman]] 
+
+'''Tilmas inegren''''
 
 == Ẓeṛ daɣen ==
 * [[Abanɣu agezlan|Azamur agezlan]]
