--- a/Aqerru.mw
+++ b/Aqerru.mw
@@ -1,10 +1,8 @@
 {{taynisemt}}
-Ɣur-s aṭas inumak
-[[Tugna:Coming to a head.jpg|thumb|Aqerru n wemdan]]
+
+Ɣur-s aṭas inumak:
 * D aḥric n [[tfekka]] n wemdan akk d [[iɣersiwen]]
-
 * Neqqar-it m' ara nmeslay ɣef wemdan ifazen, iḥercen
-
 * Neqqar-it i win yeṭṭfen anzad / kumanda di terbaɛt
 
 == Imedyaten ==
