*Empty MediaWiki Message*

--- a/Aqerru.mw
+++ b/Aqerru.mw
@@ -1,8 +1,8 @@
 {{taynisemt}}
 
 Ɣur-s aṭas inumak:
-* D aḥric n [[tfekka]] n wemdan akk d [[iɣersiwen]]
-* Neqqar-it m' ara nmeslay ɣef wemdan ifazen, iḥercen
+* D aḥric n [[tfekka]] n wemdan akked [[iɣersiwen]]
+* Neqqar-it mi ara nemmeslay ɣef wemdan ifazen, iḥercen
 * Neqqar-it i win yeṭṭfen anzad / kumanda di terbaɛt
 
 == Imedyaten ==
