*Empty MediaWiki Message*

--- a/Aɣref.mw
+++ b/Aɣref.mw
@@ -1,4 +1,5 @@
-'''Aɣref''' d irem deg [[tasenmetti]] d [[tasertit]] id yesskanayen tagrawt n [[afgan|ifganen]] d [[Adrum|idrumen]] yettidiren deg yiwen n usser n [[idles|yidles]] d [[tutlayt]] d inasayen deg yiwet n tmetti d yiwet n tmurt 
+{{Databox}}
+'''Aɣref''' d irem deg [[tasenmetti]] d [[tasertit]] id yesskanayen tagrawt n [[afgan|ifganen]] d [[Adrum|idrumen]] yettidiren deg yiwen n usser n [[idles|yidles]] d [[tutlayt]] d inasayen deg yiwet n tmetti d yiwet n tmurt.
 
 == Deg tfelsaft d wesɣan ==
 
