*Empty MediaWiki Message*

--- a/Azṛu.mw
+++ b/Azṛu.mw
@@ -1,6 +1,7 @@
+[[Tugna:Kimberlite.jpg|thumb|250px|]]
 
 [[Tugna:Stones_Porto_DSCF0572.jpg|thumb|250px|[[Adɣaɣ]]]]
-'''Azṛu''' neɣ '''Aṛsif''' ([[Asget: '''iẓra''', '''Tiṛesyaf''') d assileɣ yeqquren n [[amɣuz|imɣuzen]] igamanen, Azṛu yettgi-d amur d agejdan deg tsuddist n [[tiferkit n wakal|tferkit n wakal]] ɣef wanect-a iy ga d tigget tagejdant deg ussileɣ n [[tagnit|tegnit]] 
+'''Azṛu''' neɣ '''Aṛsif''' ([[Asget: '''iẓra''', '''Tiṛesyaf''') d assileɣ yeqquren n [[amɣuz|imɣuzen]] igamanen, Azṛu yettgi-d amur d agejdan deg tsuddist n [[tiferkit n wakal|tferkit n wakal]] ɣef wanect-a iy ga d tigget tagejdant deg ussileɣ n [[tagnit|tegnit]]
 
 == Ismilen n yiẓra ==
 
