*Empty MediaWiki Message*

--- a/Ajṛaṛxi.mw
+++ b/Ajṛaṛxi.mw
@@ -1,10 +1,9 @@
-{{Automatic taxobox}}
-'''Ajṛaṛxi''' neɣ '''Afeqqus weɣyul'''
+{{Databox}}
+'''Ajṛaṛxi''' neɣ '''Afeqqus weɣyul'''.
+
+{{Datastub}}
 
 [[Tugna:Aristolochia fontanesii.jpg|thumb|Ajṛaṛxi<ref>Ḍil ad twaliḍ, ruḥ ad d-tawiḍ, qim ulac. Omar Kerdja, Edition Tira</ref> - Aristolochia fontanesii]]
-
-=== Tilmas ==
-*
 
 == Ismawen ==
 *Isem-is s latinit: Aristolochia fontanesii
