*Empty MediaWiki Message*

--- a/Tagida.mw
+++ b/Tagida.mw
@@ -1,4 +1,4 @@
-[[Tugna:Kitchen_table.jpg|thumb|250px|Tagida n wesɣar d [[asɣim|usɣim]]]]
+[[Tugna:Kitchen_table.jpg|thumb|250px|Tagida n wesɣar d kuẓ n [[asɣim|yisɣimen]]]]
 
 '''Tagida''' neɣ '''Tamrust''' d [[asɣaṛ|tasɣart]] hrawen talɣa-ynes d amezzay neɣ d [[asrem]] ddmen-t 4 n iṭarren, ttwarsen-t fellas tɣawsiwin yemgaraden am [[učči|wučči]], Tagida tga d [[aruku]], Tagida tuttwaxdam s kra n [[azara|izaran]] am [[asɣaṛ|wesɣar]] d [[tamzukt|temzukt]] d [[amɣuz|imɣuzen]] n iden
 
