*Empty MediaWiki Message*

--- a/Asgen.mw
+++ b/Asgen.mw
@@ -1,3 +1,5 @@
+[[Tugna:سرير نوم|thumb|250px|Asgen n yiṭes]]
+
 '''Asgen''' ([[Asget]]: '''isegnan''') d yiwen n [[aruku|uruku]] yettusxedmen i [[iṭes|yiṭes]] d usgunfu
 
 == Ẓeṛ daɣen ==
