*Empty MediaWiki Message*

--- a/Asgen.mw
+++ b/Asgen.mw
@@ -1,4 +1,4 @@
-[[Tugna:سرير نوم|thumb|250px|Asgen n yiṭes]]
+[[Tugna:سرير نوم.jpg|thumb|250px|Asgen n yiṭes]]
 
 '''Asgen''' ([[Asget]]: '''isegnan''') d yiwen n [[aruku|uruku]] yettusxedmen i [[iṭes|yiṭes]] d usgunfu
 
