*Empty MediaWiki Message*

--- a/Aẓeffun_(aɣersiw).mw
+++ b/Aẓeffun_(aɣersiw).mw
@@ -16,3 +16,5 @@ Deg [[Agezdu|ugezdu]] n [[Tizi Wezzu]] deg [[Tamurt n Leqbayel|Tmurt n Iqbayliye
 * [[Tiruca]]
 
 [[Category:Tiruca]]
+[[Category:iɣersiwen]]
+[[Category:iɣersiwen iwlalen]]
