*Empty MediaWiki Message*

--- a/Tazrut.mw
+++ b/Tazrut.mw
@@ -1,4 +1,7 @@
-'''Tazrut''' d afecku iy zemren ad yessended [[tafat]] s tarrayt ara ad yaggẓen aṭas n igelman-is iẓaranen, Tazrut tettusexdem i wseẓli (i wcebbeḥ) n tugna, Akken daɣen i llant tizra yettwasxedmen deg ifecka ussnanen am [[atiliskup|utiliskup]] d [[Alaser|ulaser]] d [[takamra|tkamra]] yakk d ifecka imugrayen 
+[[Tugna:Mirror.jpg|thumb|250px|]]
+
+
+'''Tazrut''' d afecku iy zemren ad yessended [[tafat]] s tarrayt ara ad yaggẓen aṭas n igelman-is iẓaranen, Tazrut tettusexdem i wseẓli (i wcebbeḥ) n tugna, Akken daɣen i llant tizra yettwasxedmen deg ifecka ussnanen am [[atiliskup|utiliskup]] d [[Alaser|ulaser]] d [[takamra|tkamra]] yakk d ifecka imugrayen
 
 == Amezruy ==
 
