*Empty MediaWiki Message*

--- a/Adrar_n_Dduɣ.mw
+++ b/Adrar_n_Dduɣ.mw
@@ -20,7 +20,7 @@
 | orogeny=[[Alpine orogeny]]
 }}
 
-'''Adrar n Dduɣ''' d azrar amedrar (chaine montagneuse) n Weṭlas Atelli i yeɛlayen ar 1008 imetren af yilel. Teqbreb f temdint n [[Ɛennaba]] (''Buna'').Taqacuct-is i yugaren tiyaḍ d Bu Zizi di tɣiwant n [[Sraydi]]. 
-Azrar n Dduɣ yeɣzef si [[Iɣef n Tiḍaf]] (''Cap de Garde'') ar [[Iɣef n Uzzal]] (''Cap de Fer'').
+'''Adrar n Dduɣ''' d [[azrar n idurar|azrar amedrar]] n [[aṭlas anewrir|weṭlas anewrir]] i yeflalen (yeɛlayen) s wazal n 1008 imetren af y[[ilel]], Adrar-a yuded f temdint n [[Ɛennaba|Buna]] (Ɛennaba). Taqacuct-is i yugaren tiyaḍ d Bu Zizi di tɣiwant n [[Sraydi]]. 
+Azrar n Dduɣ yeɣzef si [[Iɣef n tuguẓt]] (''Cap de Garde'') ar [[Iɣef n wuzzal]] (''Cap de Fer'').
 
-[[Category:Adrar]][[Category:Ledzayer]]
+[[Category:idurar]][[Category:idurar n waṭlas]]
