--- a/Adrar_n_Dduɣ.mw
+++ b/Adrar_n_Dduɣ.mw
@@ -12,7 +12,7 @@
 | label_position = none
 | listing = 
 | location = [[Tawilayt n Ɛennaba|Ɛennaba]], [[Tawilayt n Skikda|Skikda]] ( َ[[Dzayer]] )
-| parent = [[Aṭlas Atelli]]
+| parent = [[Aṭlas anewrir]]
 | coordinates = {{coord|36|52|0|N|7|39|0|E|type:mountain_scale:100000|format=dms|display=inline,title}}
 | coordinates_ref =<ref>[[Google Earth]]</ref>
 | geology=[[Crystalline]] [[Metamorphic rock|metamorphic]]
@@ -20,7 +20,7 @@
 | orogeny=[[Alpine orogeny]]
 }}
 
-'''Adrar n Dduɣ''' d [[azrar n idurar|azrar amedrar]] n [[aṭlas anewrir|weṭlas anewrir]] i yeflalen (yeɛlayen) s wazal n 1008 imetren af y[[ilel]], Adrar-a yuded f temdint n [[Ɛennaba|Buna]] (Ɛennaba). Taqacuct-is i yugaren tiyaḍ d Bu Zizi di tɣiwant n [[Sraydi]]. 
+'''Adrar n Dduɣ''' d [[adrar]] id yezgan deg [[azrar n idurar|azrar amedrar]] n [[aṭlas anewrir|weṭlas anewrir]] i yeflalen (yeɛlayen) s wazal n 1008 imetren af y[[ilel]], Adrar-a yuded f temdint n [[Ɛennaba|Buna]] (Ɛennaba). Taqacuct-is i yugaren tiyaḍ d Bu Zizi di tɣiwant n [[Sraydi]]. 
 Azrar n Dduɣ yeɣzef si [[Iɣef n tuguẓt]] (''Cap de Garde'') ar [[Iɣef n wuzzal]] (''Cap de Fer'').
 
 [[Category:idurar]][[Category:idurar n waṭlas]]
