*Empty MediaWiki Message*

--- a/Ǧerǧer.mw
+++ b/Ǧerǧer.mw
@@ -18,6 +18,19 @@
 | geology= [[Limestone]]| period=[[Early Jurassic]]| orogeny=[[Alpine orogeny]]
 }}
 
-Ǧerǧer d idurar n tamurt n [[Leqbayel|Yiqbayliyen]], taqacuct tunnigt deg-s tesɛa 2308 m, isem-is [[Yemma Xliǧa (Tamguṭ)]], tettekki ar tɣiwant n [[Ṣaḥariǧ]] deg [[Tanebḍit n Tubiret|tnebḍit n Tubiret]].
+'''Ǧerǧer''' d [[azrar n Idurar|azrar amedrar]] id yezgan deg umalu d tlemmast n [[tamurt n Leqbayel|tmurt n Yiqbayliyen]], [[isek|taqacuct]] tunnigt deg-s tls (tesɛa) 2308 m, isem-is [[Yemma Xliǧa (Tamguṭ)|Yemma Xliǧa]] yeṭṭafaren tɣiwant n [[Ṣaḥariǧ]] deg [[Tanebḍit n Tubiret|ugezdu n Tubiret]]
+
+== Anezwu ==
+Idurar n Ǧerǧer d ideg [[asemmiṭ|iy semmṭen]] s waṭas aladɣa deg [[tagrest|tegrest]] anda yekkat [[adfel|wedfel]] d [[agris|wegris]] s tuget, [[taẓɣelt]] deg waṭas n wakuden d tin yeṭṭafaren ar -20 C°
+
+== Imezdaɣ ==
+Imezdaɣ n idurar n Ǧerǧer yakk d [[Iqbayliyen]], zzint-as waṭas n [[taddart|tuddar]] 
+
+== Tarakalt == 
+
+== Tamerrit ==
+
+
+
 
 [[Category:Adrar]][[Category:Tamurt n Leqbayel]]
