*Empty MediaWiki Message*

--- a/Ǧerǧer.mw
+++ b/Ǧerǧer.mw
@@ -30,7 +30,11 @@ Imezdaɣ n idurar n Ǧerǧer yakk d [[Iqbayliyen]], zzint-as waṭas n [[taddart
 
 == Tamerrit ==
 
+== Ẓeṛ daɣen ==
+* [[Azṛu yeflan]]
+* [[Aṭlas anewrir]]
+* [[Yemma Xliǧa]]
 
-
-
-[[Category:Adrar]][[Category:Tamurt n Leqbayel]]
+[[Category:idurar]][[Category:Tamurt n Iqbayliyen]]
+[[Category:idurar n waṭlas]]
+[[Category:Aṭlas anewrir]]
