*Empty MediaWiki Message*

--- a/Ǧerǧer.mw
+++ b/Ǧerǧer.mw
@@ -4,15 +4,15 @@
 | photo=Kabylie-neige.jpg
 | photo_caption=Ǧerǧer s wedfel
 | country=Algeria
-| region=[[Tamurt n Leqbayel]]
-| parent=[[Aṭlas atelli]]
+| region=[[Tamurt n Iqbayliyen]]
+| parent=[[Aṭlas anewrir]]
 | map = Algeria
 | map_caption = 
 | map_size = 250
 | label_position = bottom
 | area_km2= | length_km= | length_orientation=
 | width_km= | width_orientation=
-| highest=[[Yemma Xliǧa (Tamguṭ)|Yemma Xliǧa]] (Tamguṭ Ɛlayen)
+| highest=[[Yemma Xliǧa (Tamguṭ)|Yemma Xliǧa]] (Isek yeflalen)
 | elevation_m=2308
 | coordinates = {{coord|36|26|51|N|04|13|42|E|type:mountain_scale:100000|format=dms|display=inline,title}}
 | geology= [[Limestone]]| period=[[Early Jurassic]]| orogeny=[[Alpine orogeny]]
