--- a/Azirdyaw.mw
+++ b/Azirdyaw.mw
@@ -1,5 +1,5 @@
 {{Automatic taxobox}}
-'''Azirdyaw''' neɣ '''Aɣafaf''' ('''[[Assaɣ ussnan]]''': ''Mephitidae'') d yiwet n [[tawacult (tasnudert)|twacult]] yeṭṭafaren [[tafesna (tasnudert)|tafesna]] n [[timseksumin|temseksumin]], Aṭas n medden tt-ɣilen d akken azirdyaw d yiwen n [[aɣersiw|uɣersiw]] maca deg tidet dges 12 n [[talmest|telmas]] yemgaraden, Azirdyaw yettwassen s [[tikdi]] (rriḥa) n diri tberru-y-as mi ara ad tt-yaggez kra n umihi <br/>
+'''Azirdyaw''' neɣ '''Aɣafaf''' ('''[[Assaɣ ussnan]]''': ''Mephitidae'') d yiwet n [[tawacult (tasnudert)|twacult]] yeṭṭafaren [[tafesna (tasnudert)|tafesna]] n [[timseksumin|temseksumin]], Aṭas n medden tt-ɣilen d akken azirdyaw d yiwen n [[aɣersiw|uɣersiw]] maca deg tidet dges 12 n [[talmest|telmas]] yemgaraden, Azirdyaw yettwassen s [[tikdi]] (rriḥa) n diri iberru-y-as mi ara ad tt-yaggez kra n umihi am [[tagemra|tgemrawin]] <br/>
 imusnawen llan tt-ɣilen d akken azirdyaw yeṭṭafar [[Tidɣaɣatin|tedɣaɣatin]] maca sin akin tuɣal tettwasismel d tawacult timziregt
 
 == Umuɣ n telmas == 
