*Empty MediaWiki Message*

--- a/ESME_Sudria.mw
+++ b/ESME_Sudria.mw
@@ -1,6 +1,6 @@
 {{Databox}}
-'''ESME-Sudria''' (ex-Ecole spéciale de mécanique et d'électrécité) d yiwet ''Grande école'' (lakul tamuqrant) tafransist n tusna enjenyer, tella di temdint n [[Ivry-sur-Seine]].
+'''ESME-Sudria''' (ex-Ecole spéciale de mécanique et d'electricité) d yiwet n ''Grande école'' (lakul tameqqrant) tafransist n tussna n enjenyer, tella di temdint n [[Ivry-sur-Seine]].
 
-Lakul tellul di useggas n 1905, vava-s d lenjenyer afransi s izuran ikataliyen [[Joachim Sudria]].
+Lakul tlul di useggas n 1905, baba-s d anjinyur afransi s iẓuran ikataliyen [[Joachim Sudria]].
 
 [[Category:Tasdawit]]
