--- a/Azirdyaw.mw
+++ b/Azirdyaw.mw
@@ -2,7 +2,10 @@
 '''Azirdyaw''' neɣ '''Aɣafaf''' ('''[[Assaɣ ussnan]]''': ''Mephitidae'') d yiwet n [[tawacult (tasnudert)|twacult]] yeṭṭafaren [[tafesna (tasnudert)|tafesna]] n [[timseksumin|temseksumin]], Aṭas n medden tt-ɣilen d akken azirdyaw d yiwen n [[aɣersiw|uɣersiw]] maca deg tidet dges 12 n [[talmest|telmas]] yemgaraden, Azirdyaw yettwassen s [[tikdi]] (rriḥa) n diri iberru-y-as mi ara ad tt-yaggez kra n umihi am [[tagemra|tgemrawin]] <br/>
 imusnawen llan tt-ɣilen d akken azirdyaw yeṭṭafar [[Tidɣaɣatin|tedɣaɣatin]] maca sin akin tuɣal tettwasismel d tawacult timziregt
 
-== Umuɣ n telmas == 
+== [[Tasartut n tesnudert|Asismel]] ==
+Tawacult n tzirdyawin  (''Mephitidae'') d tin id yennulfan sɣur [[asnudran|usnudran]] [[Fransa|Afrensaw]] [[Charles-Lucien Bonaparte]] deg useggas n [[1845]] anda id yessegrew yakk izirdyawen deg yiwet n twacult.  Send n uzmez-a (1845), azirdyaw yella tettwasismel d [[adu-twacult]] yeṭṭafaren [[tawacult (tasnudert)|tawacult]] n [[tidɣaɣatin|tedɣaɣatin]] maca tazrawt taǧiniyt tulles-as (tbeddel-as) asismel, Amur ameqran n telmas n twacult-a d wid yettidiren deg [[Tamrikt|Marikan]] anagar snat n telmas ttidirent deg [[unẓul agmudan n Asya]] 
+
+=== Umuɣ n telmas ===
 
 == Ẓeṛ daɣen ==
 
