*Empty MediaWiki Message*

--- a/Azirdyaw.mw
+++ b/Azirdyaw.mw
@@ -7,6 +7,9 @@ Tawacult n tzirdyawin  (''Mephitidae'') d tin id yennulfan sɣur [[asnudran|usnu
 
 === Umuɣ n telmas ===
 
+== Taẓuni (ideggan n tudert) ==
+Amur ameqran n [[talmest|telmas]] d [[tawsit (tudersent)|tewsitin]] n uzirdyaw ttidirent deg [[Tamrikt|Marikan]] anagar snat n telmas
+
 == Ẓeṛ daɣen ==
 
 [[Category:iɣersiwen]]
