--- a/Aswu.mw
+++ b/Aswu.mw
@@ -2,7 +2,13 @@
 '''Aswu''' ('''[[Assaɣ ussnan]]''': ''Ciconiidae'') yettwassen ɣer Yiqbayliyen s '''Abellarej''' dɣa awal-a yekka-d seg [[Tagrikt|Tegrikt]] (''Πελαργός'' / ''Pelargós'') d [[aylal]] iminig seg Iylalen meqqren d yiṭarren ɣezzifen. Aswu d [[tawacult (tasnudert)|tawacult]] dgi llant 6 n [[tawsit (tudersent)|tewsitin]] yettawin 19 n [[talmest|telmas]]
 
 == Aglam ==
+Aswu d [[tatniwin|tatna]] meqqren (seg 75 cm ar 152 cm), Iṭarren-is ɣezzif-it, [[aqamum|aqamum-is]] yemsed, yezmer ad yefferfer s teflel meqqren 
 
+== Asismel =
+
+=== Umuɣ n tewsitin ===
+
+=== Umuɣ n telmas ===
 
 == Ẓeṛ daɣen ==
 * [[Aylal]]
