*Empty MediaWiki Message*

--- a/Aswu.mw
+++ b/Aswu.mw
@@ -4,7 +4,7 @@
 == Aglam ==
 Aswu d [[tatniwin|tatna]] meqqren (seg 75 cm ar 152 cm), Iṭarren-is ɣezzif-it, [[aqamum|aqamum-is]] yemsed, yezmer ad yefferfer s teflel meqqren 
 
-== Asismel =
+== Asismel ==
 
 === Umuɣ n tewsitin ===
 
