*Empty MediaWiki Message*

--- a/Tasemsut.mw
+++ b/Tasemsut.mw
@@ -3,3 +3,11 @@
 '''Tasemsut''' neɣ '''Taseffadṭ''' d afecku id [[tamugri|yettmugrin]] s [[Amezzil|umezzil]] tetwasxdem i wesfaṭ n wayen [[tira|yettwarun]] s [[amru|wemru]]
 
 == Amezruy ==
+
+== Ẓeṛ daɣen ==
+* [[Taserramt]]
+* [[Imru]]
+* [[Azmam]]
+* [[Adlis]]
+
+[[Category:ifecka n tezrawt]]
