--- a/Amru.mw
+++ b/Amru.mw
@@ -2,7 +2,7 @@
 
 S tenmegla n wayyen yettwassnen (d akken amru yettwaxdam s [[aldun|uldun]]) amru deg tidet yettwaxdam s [[Agrafit|ugrafit]] d [[Akaṛbun|ukaṛbun]] yettwarwin s waluṭ, Amru yennulfa-d deg [[tasut tis 18|tsut tis 18]] anda send n uzmez-a yella yettwaxdam ufraw n waylalen i tira s [[ileɣ|yileɣ]] 
 
-== Initen n umru 
+== Initen n umru ==
 
 == Ẓeṛ daɣen ==
 * [[Imru]]
