*Empty MediaWiki Message*

--- a/Amru.mw
+++ b/Amru.mw
@@ -1,6 +1,8 @@
+[[Tugna:Pencil_01_kamranki.jpg|thumb|250px|ixef n umru]]
+
 '''Amru''' d afecku [[awlellu|awlellay]] yettusxedmen i [[tira]] d [[usuneɣ]] ɣef [[lkaɣeḍ|uferki]], yemgarad ɣef telmas n [[imru|yimra]] n iden d akken-it yezmer ad yettwasfeṭ (s [[Tasemsut|tesemsut]]) 
 
-S tenmegla n wayyen yettwassnen (d akken amru yettwaxdam s [[aldun|uldun]]) amru deg tidet yettwaxdam s [[Agrafit|ugrafit]] d [[Akaṛbun|ukaṛbun]] yettwarwin s waluṭ, Amru yennulfa-d deg [[tasut tis 18|tsut tis 18]] anda send n uzmez-a yella yettwaxdam ufraw n waylalen i tira s [[ileɣ|yileɣ]] 
+S tenmegla n wayyen yettwassnen (d akken amru yettwaxdam s [[aldun|uldun]]) amru deg tidet yettwaxdam s [[Agrafit|ugrafit]] d [[Akaṛbun|ukaṛbun]] yettwarwin s waluṭ, Amru yennulfa-d deg [[tasut tis 18|tsut tis 18]] anda send n uzmez-a yella yettwaxdam ufraw n waylalen i tira s [[ileɣ|yileɣ]]
 
 == Initen n umru ==
 
