--- a/Iferki.mw
+++ b/Iferki.mw
@@ -1,3 +1,14 @@
-Tabadut n yisem Akaɣeḍ
+'''Iferki''' d [[tanga]] sdiden (rqiqen) id yettwaxdamen s [[agilim n iferki|ugilim n iferki]] id yettwaxdamen s uttekki n [[isirg|isirgen]] isililuzen n [[imɣi|yimɣan]], iferki tettusexdem i [[tiri]] d [[asuneɣ|usuneɣ]] d [[ajellel|ujellel]] 
 
-Akaɣeḍ, nettini-as daɣen lkaɣeḍ, d awal i d-yekkan seg tutlayt taɛrabt, ttarunt akka : (الكاغد). D isem n yimɣi-nni i yes-s xeddmen zik-nni akaɣeḍ deg tmurt n Beɣdad. Asegget n wawal akaɣeḍ nettaru-t akka : ikaɣḍen ɣas akken deg ususru nettini-as ‘’Lekwaɣeḍ’’. Mi ara ten-sers deg uddad amaruz ad t-naru akka : ukaɣeḍ (yikaɣḍen). Neslugen awal-a acku mi t-id-newwi, neǧǧa-t akken deg talɣa-s tanaṣlit ur yedda ara d talɣiwin n tjerrumt n tutlayt-nneɣ. Seg tama nniḍen, aslugen ad aɣ-yeǧǧ nezmer ad nessuddem awalen nniḍen amedya n yisem n umdan yeznuzun akaɣeḍ, isem n tḥanut-is...
+== Amezruy ==
+
+== Tamugri n iferki ==
+
+== Tilmas n iferki ==
+
+== Ẓeṛ daɣen ==
+* [[Imru]]
+* [[Amru]]
+* [[Taferkit]]
+
+[[Category:ifecka n tezrawt]]
