*Empty MediaWiki Message*

--- a/Iferki.mw
+++ b/Iferki.mw
@@ -1,6 +1,6 @@
 [[Tugna:Paper_sheet.jpg|thumb|250px|Iferki]]
 
-'''Iferki''' d [[tanga]] sdiden (rqiqen) id yettwaxdamen s [[agilim n iferki|ugilim n iferki]] id yettwaxdamen s uttekki n [[isirg|isirgen]] isililuzen n [[imɣi|yimɣan]], iferki tettusexdem i [[tiri]] d [[asuneɣ|usuneɣ]] d [[ajellel|ujellel]]
+'''Iferki''' d [[tanga]] tusdidt (rqiqen) id yettwaxdamen s [[agilim n iferki|ugilim n iferki]] id yettwaxdamen s uttekki n [[isirg|isirgen]] isililuzen n [[imɣi|yimɣan]], iferki tettusexdem i [[tiri]] d [[asuneɣ|usuneɣ]] d [[ajellel|ujellel]]
 
 == Amezruy ==
 
