--- a/Agnin.mw
+++ b/Agnin.mw
@@ -1,7 +1,7 @@
-{{Databox}}
+{{Automatic taxobox}}
 [[Tugna:Rabbit 23 Mar 2005.jpg|thumb|250px|Awtul neɣ Agtul]]
 
-'''Awtul''' neɣ '''Agnin''' d [[aɣersiw]] yeṭṭafar [[tafesna]] n [[tiwetlin]] yettekkin deg [[asmil (tasnudert)|wesmil]] n [[Timsiffatin|temsiffatin]], [[Tawacult (tasnudert)|tawacult]] n [[Tigetlin|tgetlin]], Awtul d aɣersiw [[agrad|amegrud]] (Yetturba deg wexxam) i lmend n [[aksum|weksum]]-is d [[aglim|weglim]]-is, Iɣɣaz deg w[[akal]] akken id yebnu tamezduɣt-is umi qqaren [[angu]]
+'''Agnin''' d [[aɣersiw]] yeṭṭafar [[tafesna (tasnudert)|tafesna]] n [[tiwetlin]] yettekkin deg [[asmil (tasnudert)|wesmil]] n [[Timsiffatin|temsutad]], [[Tawacult (tasnudert)|tawacult]] n [[Tigetlin|tgetlin]], Awtul d aɣersiw [[agrad|amegrud]] (Yetturba deg wexxam) i lmend n [[aksum|weksum]]-is d [[aglim|weglim]]-is, Iɣɣaz deg w[[akal]] akken id yebnu tamezduɣt-is umi qqaren [[angu]]
 
 == Tilmas n iwtal == 
 
