*Empty MediaWiki Message*

--- a/Agnin.mw
+++ b/Agnin.mw
@@ -3,7 +3,9 @@
 
 '''Agnin''' d [[aɣersiw]] yeṭṭafar [[tafesna (tasnudert)|tafesna]] n [[tiwetlin]] yettekkin deg [[asmil (tasnudert)|wesmil]] n [[Timsiffatin|temsutad]], [[Tawacult (tasnudert)|tawacult]] n [[Tigetlin|tgetlin]], Awtul d aɣersiw [[agrad|amegrud]] (Yetturba deg wexxam) i lmend n [[aksum|weksum]]-is d [[aglim|weglim]]-is, Iɣɣaz deg w[[akal]] akken id yebnu tamezduɣt-is umi qqaren [[angu]]
 
-== Tilmas n iwtal == 
+== Amgarad gar n ugnin d [[Agtul|uwtul]] ==
+* Awtul neɣ Agtul d aɣersiw yettidiren deg tzagirt (lexla) ur yezmir ara ad yedder ɣer ufgan
+* Agnin d aɣersiw [[agrad|amegrud]], iẓuran-is kkan-d seg [[Agtul|wegtul]], yettwagr-s seg zik nni
 
 == Iknuzen (ifrax) ==
 
