*Empty MediaWiki Message*

--- a/Agtul.mw
+++ b/Agtul.mw
@@ -1,6 +1,6 @@
 {{Automatic taxobox}}
 
-'''Agtul''' neɣ '''Ayerziz''' ([[isem usnan]]: ''Lepus'') d aɣersiw [[Timestuga|amestugan]] Yeṭṭafar [[Tawacult (tasnudert)|tawacult]] n [[Tigetlin|tgetlin]] deg [[tafesna|tfesna]] n [[tiwetlin|twetlin]],  Yettemcabi [[Awtul]], Maca s unemgal-is agtul ur yettidir ara deg wexxam.
+'''Agtul''' neɣ '''Awtul''' ('''[[Assaɣ ussnan]]''': ''Lepus'') d [[aɣersiw]] [[Timestuga|amestugan]] yeṭṭafar [[Tawacult (tasnudert)|tawacult]] n [[Tigetlin|tgetlin]] deg [[tafesna (tasnudert)|tfesna]] n [[tiwetlin|twetlin]],  Yettemcabi [[Agnin]], Maca s unemgal-is agtul ur yettidir ara deg wexxam. Ma d agnin d aɣersiw [[agrad|amegrud]]
 
 == Ẓeṛ daɣen ==
 * [[Awtul]]
