--- a/Imerwel.mw
+++ b/Imerwel.mw
@@ -1,6 +1,6 @@
 {{Automatic taxobox}}
 
-'''Imerwel''' ([[isem usnan]]: ''Lepus capensis'') d yiwet n [[Talmest|telmest]] deg [[asmil (tasnudert)|wesmil]] n [[Timsiffatin|temsiffatin]] yeṭṭafaren [[Tawacult (tasnudert)|tawacult]] n [[tigetlin|tgetlin]], [[tafesna]] n  [[tiwetlin|twetlin]]
+'''Imerwel''' ('''[[Assaɣ ussnan]]''': ''Lepus capensis'') d yiwet n [[Talmest|telmest]] n [[tigetlin|igtal]] yeṭṭafaren [[asmil (tasnudert)|asmil]] n [[Timsiffatin|temsutad]] yeṭṭafaren [[Tawacult (tasnudert)|tawacult]] n [[tigetlin|tgetlin]], [[tafesna]] n [[tiwetlin|twetlin]]
 
 == Idgan n tudert ==
 Imerwel d awtul yettidiren deg [[Tafriqt|Tefriqt]] alamma d [[Lhend]]
