*Empty MediaWiki Message*

--- a/Imerwel.mw
+++ b/Imerwel.mw
@@ -2,7 +2,7 @@
 
 '''Imerwel''' ('''[[Assaɣ ussnan]]''': ''Lepus capensis'') d yiwet n [[Talmest|telmest]] n [[tigetlin|igtal]] yeṭṭafaren [[asmil (tasnudert)|asmil]] n [[Timsiffatin|temsutad]] yeṭṭafaren [[Tawacult (tasnudert)|tawacult]] n [[tigetlin|tgetlin]], [[tafesna]] n [[tiwetlin|twetlin]]
 
-== Idgan n tudert ==
+== Ideggan n tudert ==
 Imerwel d awtul yettidiren deg [[Tafriqt|Tefriqt]] alamma d [[Lhend]]
 
 == Ẓeṛ daɣen ==
