--- a/Tiwetlɣatin.mw
+++ b/Tiwetlɣatin.mw
@@ -1,5 +1,5 @@
 {{Automatic taxobox}}
-'''Tiwetlin''' ([[assaɣ usnan]]: ''Lagomorpha'') d [[tafesna]] n [[aɣersiw|iɣersiwen]] [[Timsiffatin|imsuṭaṭ]] yettugezmer ar snat n [[tawacult (tasnudert)|twaculin]]: [[awtul|iwetlen]] d [[Pika|Tipikawin]], Ttunegzent ar 13 n [[tawsit (tudersent)|tewsitin]] d 80 n [[talmest|telmas]], Ttemcabin-t s waṭas ar [[timseɣẓaẓ|temseɣẓaẓ]] deg [[tikeli|tikliwin-nsent]]
+'''Tiwetlɣatin''' ('''[[assaɣ usnan]]''': ''Lagomorpha'') d [[tafesna (tasnudert)|tafesna]] n [[aɣersiw|iɣersiwen]] [[Timsiffatin|imsuṭad]] yettugezmer ar snat n [[tawacult (tasnudert)|twaculin]]: [[awtul|iwetlen]] d [[Pika|Tipikawin]], Ttunegzent ar 13 n [[tawsit (tudersent)|tewsitin]] d 80 n [[talmest|telmas]], Ttemcabin-t s waṭas ar [[timseɣẓaẓ|temseɣẓaẓ]] deg [[tikeli|tikliwin-nsent]]
 
 == Tiwaculin ==
 
