*Empty MediaWiki Message*

--- a/Awtil.mw
+++ b/Awtil.mw
@@ -1,6 +1,10 @@
 {{Automatic taxobox}}
-'''Awtil''' ('''[[Assaɣ ussnan]]''': ''Oryctolagus cuniculus'') d yiwet n [[talmest|telmest]] meẓẓiyen n [[tiwtelɣatin|tewtelɣatin]] yeṭṭafaren [[tawacult (tasnudert)|tawacult]] n [[tigetlin|igtal]], Tiɣerfin
+'''Awtil''' ('''[[Assaɣ ussnan]]''': ''Oryctolagus cuniculus'') d yiwet n [[talmest|telmest]] meẓẓiyen n [[tiwtelɣatin|tewtelɣatin]] yeṭṭafaren [[tawacult (tasnudert)|tawacult]] n [[tigetlin|igtal]], Tiɣerfin-is tizagirin (n lexla) gan-t d timezdiyin deg [[Turuft]] maca amdan-nsent yettedrus (yettenqas), Deg [[Ustralya]] yettwasekcem deg useggas n [[1859]]  sin akin yuɣal d [[talmest tamekcumt]] 
 
+== Aglam ==
+Teɣzi n uwtil seg ixef-is ar wedfar-is seg 32 cm ar 50 cm, Teɣzi n imeẓẓaɣ-is seg 6 ar 9 cm, Yettazwn seg 0,9 kg ar 2,5 kg 
+ 
+== Umuɣ n tdu-lemsin ==
 
 == Ẓeṛ daɣen ==
 * [[Agtul]]
