*Empty MediaWiki Message*

--- a/Ablaɣ.mw
+++ b/Ablaɣ.mw
@@ -1,4 +1,11 @@
 {{Automatic taxobox}}
-'''Ablaɣ''' d aslem buyiɣes, tafekka-s d taɣezzfant, temsel.Yesɛa deg teɣzi tardast d wezgen (30 isuntimen).Yettidir akked Tildut (yid-s) (uṭ 62), maca mgaraden deg tfekka d teɣzi.
+'''Ablaɣ''' ('''[[Assaɣ ussnan]]: ''Alosa'') d [[tawsit (tasnudert)|tawsit]] [[inig n iselman|iselman iminigen]] (id yettalin seg [[ilel|yilel]] ar [[asif|wasif]] i wakken ad yessers [[aglay|iglayen]]) yeṭṭafaren [[tawacult (tasnudert)|tawacult]] n [[tirengin|trengin]] (''Clupeidae'') dgi yella daɣen [[tilnut|tildut]] yakk d [[Irengi]] 
+
+== Taẓuni (ideggan n tudert) ==
+
+== [[Amyaraw]] ==
+Seg [[Yebrir]] ar [[Yulyu]], Ableɣ yessentay (ibeddu) inig-is s walluy seg yilel ar isafen i wakken ad yessers timellalin-is (iglayen) 
 
 [[Category:aɣersiw]]
+[[Category:iɣersiwen iwlalen]]
+[[Category:iselman]]
