*Empty MediaWiki Message*

--- a/Ablaɣ.mw
+++ b/Ablaɣ.mw
@@ -1,5 +1,5 @@
 {{Automatic taxobox}}
-'''Ablaɣ''' ('''[[Assaɣ ussnan]]: ''Alosa'') d [[tawsit (tasnudert)|tawsit]] [[inig n iselman|iselman iminigen]] (id yettalin seg [[ilel|yilel]] ar [[asif|wasif]] i wakken ad yessers [[aglay|iglayen]]) yeṭṭafaren [[tawacult (tasnudert)|tawacult]] n [[tirengin|trengin]] (''Clupeidae'') dgi yella daɣen [[tilnut|tildut]] yakk d [[Irengi]] 
+'''Ablaɣ''' ('''[[Assaɣ ussnan]]''': ''Alosa'') d [[tawsit (tasnudert)|tawsit]] [[inig n iselman|iselman iminigen]] (id yettalin seg [[ilel|yilel]] ar [[asif|wasif]] i wakken ad yessers [[aglay|iglayen]]) yeṭṭafaren [[tawacult (tasnudert)|tawacult]] n [[tirengin|trengin]] (''Clupeidae'') dgi yella daɣen [[tilnut|tildut]] yakk d [[Irengi]]
 
 == Taẓuni (ideggan n tudert) ==
 
