--- a/Ablaɣ.mw
+++ b/Ablaɣ.mw
@@ -6,6 +6,12 @@
 == [[Amyaraw]] ==
 Seg [[Yebrir]] ar [[Yulyu]], Ableɣ yessentay (ibeddu) inig-is s walluy seg yilel ar isafen i wakken ad yessers timellalin-is (iglayen), mi ara ad tili [[tiẓɣelt|teẓɣelt]] n waman 18° [[awtem]] d [[tawtemt|tewtemt]] ttalin ar tiggi, tt-gin iman-nsent udem ar wudem sin akin kkaten aman s [[tasaccaft|tsaccafin-nsen]] ayen id yessnulfayen aṭas n wahit (lḥess d zzehir), Dɣa ahit-a iga d taɣuri i [[amercel|wmercel]]  
 
+
+== Tilmas ==
+
+== Ẓeṛ daɣen ==
+* [[Aslem]]
+
 [[Category:aɣersiw]]
 [[Category:iɣersiwen iwlalen]]
 [[Category:iselman]]
