--- a/Tidyanin_n_Tintin_d_Milu.mw
+++ b/Tidyanin_n_Tintin_d_Milu.mw
@@ -1,5 +1,5 @@
 {{Databox}}
-'''Tidyanin n Tintin d Milu''' d azwel n yiwen umeseḍfer n tesfifin yettwasunɣen (bande dessinées), i d-yesnulfa umsuneɣ abelǧiki [[Hergé]] (1907-1983), isem i d-yexdem imi yetti isekkilen imenza n yisem-is n tilawt (R, G) : Georges Remi.
-Amseḍfer-a yettussizreg-d i tikkelt tamenzut ass 10 yennayer 1929 deg “Le Petit Vingtième”, isebtaren i yimecṭaḥ n uɣmis abelǧiki “Le Vingtième Siècle”.
+'''Tidyanin n Tintin d Milu''' d [[azwel]] n yiwen umeseḍfer n tesfifin yettwasunɣen (''bande dessinées'') i d-yesnulfa [[asuneɣ|umsuneɣ]] [[Beljik|abelǧik]] [[Hergé]] (1907-1983), isem i d-yexdem imi yetti isekkilen imenza n yisem-is n tilawt (R, G) : Georges Remi.
+Amseḍfer-a yettussizreg-d i tikkelt tamenzut ass 10 yennayer [[1929]] deg “Le Petit Vingtième”, isebtaren i ymeẓẓyanen n [[aɣmis]]uɣmis abelǧik “Le Vingtième Siècle”.
 
 [[Category:Tasekla]]
