*Empty MediaWiki Message*

--- a/Azyam.mw
+++ b/Azyam.mw
@@ -23,4 +23,16 @@
 * ''[[Tursiops]]''
 }}
 
-yekka-d seg uẓar (DNFL), yemmal-d anamek n wayen zuren. Aqerruy-is iddukkel akked tuyat-is, Sawalen-as akka, acku ur yesɛi ara amgerḍ.Sawalen-as diɣen Azyam; Addenfil d amsuṭṭaḍ.Yesɛa deg teɣzi gar ukkuẓ d sḍis n yiɣallen (si snat ar tlata n lmitrat).Tafekka-s d tameqqrant, ɣur-s aqamum d aɣezzfan. Sufella n uɛrur-is, yesɛa tiferret n uɛrur (tijifert). Taṣeṭṭa-s teɛwej ɣer yidisan (s tehri) am Tizmekt. Iḥemmel ad iɛumm  aṭas,  ittneggiz nnig waman, yerna xfif. Yettɣawal, ittnecṛaḥ d yimdanen.Tiɣri-s telha aṭas.Ma d tadenfilt d unti, netta-t tettɣawal, arnu diɣen tettnecṛaḥd yimdanen.Temgarad ɣef uddenfil deg yini akked lɛumm.Taddenfilt ur tettɛummu ara weḥd-s, maca tettɛummu d igrawen.
+'''Azyam''' d [[assaɣ imezdi]] id yesskanayen kra n [[timsuṭad tiwlalin|temsuṭad tiwlalin]] d [[asif|tsafin]] yeṭṭafaren [[tafesna (tasnudert)|tafesna]] n [[Tizemkiyin|tzemkiyin]], Llan wazal n 40 n [[talmest|telmas]] n izyamen yeẓẓunin ɣef 17 n [[tawsit (tudersent)|tewsitin]] 
+
+== [[Assaɣimezdi|Ismawen Iqbayliyen imezdiyen]] d [[assaɣ ussnan|ismawen ussnanen]] n telmas ==
+
+== Azyam d ufgan ==
+
+== Ẓeṛ daɣen ==
+
+[[Category:aɣersiw]]
+[[Category:iɣersiwen]]
+[[Category:Timsuṭad]]
+[[Category:timsuṭad tiwlalin]]
+[[Category:iɣersiwen iwlalen]]
