--- a/Azyam.mw
+++ b/Azyam.mw
@@ -28,6 +28,9 @@
 == [[Assaɣ imezdi|Ismawen Iqbayliyen imezdiyen]] d [[assaɣ ussnan|ismawen ussnanen]] n telmas ==
 
 == Azyam d ufgan ==
+Deg kra n yideggan n umadal [[aksum]] n uzyam d win yettwaččen. Maca agla ameqran s wacu yettwassen uzyam d tigzi (tiḥerci) meqqren ayen yeǧǧan afgan ad t-yessexdem i wsedhu d wurar 
+
+== Tasuddist n tfekka n uzyam ==
 
 == Ẓeṛ daɣen ==
 
