*Empty MediaWiki Message*

--- a/Alefsiw.mw
+++ b/Alefsiw.mw
@@ -1,6 +1,2 @@
 {{Databox}}
-(Isem, amyag)(Ačekwaḍ)
-
-Fr:Ange de mer (Moine)
-
-Yekka-d seg uẓar (čwḍ).D aslem buyiɣes.Yesaɛa deg teɣzi azal n krad ar ukkuẓ n yiɣallen (si1.50 ar 2 n lmitrat).Yettemcabi ɣer Derqa degtalɣa.Deg ibeṛdiyen-is, yesɛa ṛebɛa ntferrawin d tihrawanin;yesɛa snat n tferrawin d timecṭuḥin sufella n uɛrur-is kifkif-itent deg teɣzi. Yettili anda lqay yilel gar n 10 d 400 n yiɣallen. Iteffer ddaw n ṛṛmel, ittefaɣ-d deg yiḍ i wakken ad yaṣḍad ayen ara yeçç. Mi arayetteṣeggid d axḍef i yexeṭṭef, yernas temɣawla. Itett iselman yesɛan iɣsan, izelmamen akked yijeɣlalen. Ini-s iga am ṛṛmel. Ma d arraw isefṛuṛux si 7ar25 n tmellalin. Arraw-is mi Ara d- fṛuṛxen seɛɛun armi d snat n turdas (40 isuntimen). Yettarrew snat n tikkal deg useggas, deg ccetwa akked unebdu.
+'''Alefsiw''' ('''[[Assaɣ ussnan]]''': ''Squalus squatina'') d tagrawt n [[aweqqas|iweqqasen]] deg [[tawsit (tudersent)|tewsit]] n '''ilefsiwen''' (''Squatina''), Tafekka n ukefsiw-a d tufrict yettidir deg y[[ijdi]] n wadda waman (deg tilqi n yilel s 150 m), Talmest-a tettwasismel d talmest yettwaggzen s umihi n wengar ɣer [[Tiddukla tagreɣlant i taggaẓt n tgama]]
