*Empty MediaWiki Message*

--- a/Alefsiw.mw
+++ b/Alefsiw.mw
@@ -1,2 +1,15 @@
 {{Databox}}
 '''Alefsiw''' ('''[[Assaɣ ussnan]]''': ''Squalus squatina'') d tagrawt n [[aweqqas|iweqqasen]] deg [[tawsit (tudersent)|tewsit]] n '''ilefsiwen''' (''Squatina''), Tafekka n ukefsiw-a d tufrict yettidir deg y[[ijdi]] n wadda waman (deg tilqi n yilel s 150 m), Talmest-a tettwasismel d talmest yettwaggzen s umihi n wengar ɣer [[Tiddukla tagreɣlant i taggaẓt n tgama]]
+
+== Aglam ==
+
+== Tikeli ==
+
+== Azal adamsan ==
+
+== Ẓeṛ daɣen ==
+* [[Azyam]]
+
+[[Category iɣersiwen iwlalen]]
+[[Category:iɣersiwen]]
+[[Category:iselman]]
