*Empty MediaWiki Message*

--- a/Tazɣuda.mw
+++ b/Tazɣuda.mw
@@ -2,7 +2,10 @@
 '''Tazɣuda''' neɣ '''Aɣeṛda yesɣaren''' ('''[[Assaɣ ussnan]]''': ''Apodemus sylvaticus'') d yiwet n [[talmest|telmest]] n [[timseɣẓaẓ|temseɣẓaẓ]] yeṭṭafaren [[tawacult (tasnudert)|tawacult]] n [[Taɣeṛdayt|iɣeṛdayen]], Tazɣuda meqqer s imik (cwiya) ɣef [[aɣeṛda n wexxam|uɣeṛda n wexxam]] 
 
 == Aglam ==
-Teɣzi n tfekka n tezɣuda d tin yettawṭen seg 8 ar 11 cm. Yettazen seg 16 ar 27 g 
+Talmest-a d tin ilan (yesɛan) Tafekka tazrgrart d [[asallaf|usallaf]] ɣezzifen, Teɣzi n tfekka n tezɣuda d tin yettawṭen seg 8 ar 11 cm. Yettazen seg 16 ar 27 g
+
+== [[Amyaraw]] ==
+[[Tawtemt|Tiwetmin]] lant 3 n idisen iy zemren ad arwen alamma d 9 n [[aqziz|teqzizen]], Tessuṭnṭ-iten yal 5 n [[tasdidt|tesdidin]] i tallit n 3 ar 4 n wussan, [[Asirem n tudert]] n tezɣuda d win yettilin gar n 2 ar 4 n iseggasen
 
 == Tikeli d wučči ==
 Tazɣuda d aɣersiw yessermaden deg [[iṭ]], tettunag ɣef wučč, učči-ynes d [[ifes|ifsan]], [[aburɣas|iburɣas]] yakk d [[igumma]]
