*Empty MediaWiki Message*

--- a/Asiɣaɣ.mw
+++ b/Asiɣaɣ.mw
@@ -1,4 +1,4 @@
-'''Asiɣaɣ''' neɣ '''Tizlemt''' neɣ '''Azemmar''' ('''[[Assaɣ ussnan]]: ''Muraenidae'') d [[tawacult (tasnudert)|tawacult]] n [[islem|iselman]] yeṭṭafaren [[tafesna (tasnudert)|tafesna]] n [[asennur|tsennurin]], Dges azal n 200 n [[talmest|telmas]] yeẓẓunin (i ferqen) ɣef 16 n [[tawsit (tudersent)|tewsitin]]  
+'''Asiɣaɣ''' neɣ '''Tizlemt''' neɣ '''Azemmar''' ('''[[Assaɣ ussnan]]''': ''Muraenidae'') d [[tawacult (tasnudert)|tawacult]] n [[islem|iselman]] yeṭṭafaren [[tafesna (tasnudert)|tafesna]] n [[asennur|tsennurin]], Dges azal n 200 n [[talmest|telmas]] yeẓẓunin (i ferqen) ɣef 16 n [[tawsit (tudersent)|tewsitin]]
 
 == Aglam ==
 
