Quelques corrections + ajout d'un lien

--- a/Ass_n_Tlelli.mw
+++ b/Ass_n_Tlelli.mw
@@ -1,39 +1,87 @@
-'''Ass n Tlelli''' d imseɣret aɣelnaw n tmurt n leqbayel i d-yufraren aseggas n 2010 i d-iqublen 2960 deg tafada amaziɣ.
+'''Ass n Tlelli''' d imseɣret aɣelnaw n [[Tamurt n Leqbayel]] i d-yufraren [[aseggas]] n 2010 i d-iqublen 2960 deg tafada [https://kabyle.com/videos/hymne-national-kabyle-ass-n-tlelli-le-jour-de-liberte amaziɣ].
 
+== Imeslayen ==
 '''Ass n Tlelli'''
-*D ass-a i d ass n tlelli
-*D ass i deg aɣlan aqvayli
-*Yufrar-d ger tmura
-*Yal yiwen ad-d ittwali 
-*Taseddaṛt i fi nuli
-*Nnig-s ur d-ikki kra
-*Xas ma tikwal nɣelli
-*Ur ǧin i neḥvis tikli
-*Nessawaḍ di taggara
-*Iṭij i si-d neflali
-*Assa azekka a-nili
-*Mi nezga nvedd i tnekra
-*Nekni d aɣref n tlelli
-*Nekni d tafat i tmuɣli
-*Nekni d times d wuzzal
-*Nekni d tamurt d igenni
-*Nekni d agur d tziri
-*Nekni d iseɣ d wazal
-*Nekni d tiẓet d tayri
-*D talemmast ak d yiri
-*Nekni d illel d wakal
-*Nezmer i tniri d tiẓgi
-*Afus ur ittergigi
-*ɣef talwit nezmer i ccwal
-*Nekni d azref d isekkim
-*Ger imeqranen a-neqqim
-*Nekkni d tifrat d umtawi
-*Nekni d afḍis d ugelzim 
-*Yeddan d tussna d uvelkim
-*Fellaɣ teḥṛes neɣ d llwi.
-*Isem nneɣ Aqvayli d afzim
-*F nyir d Amaziɣ d urqim
-*Fellas lḥif a-t nezwi
-*Kkert ak° a-ɣid walim
-*D nnuva nneɣ a-ɣ-d tezzim
-*Assa-yi a-tt id nawi.
+
+D ass-a i d ass n tlelli
+
+D ass i deg aɣlan aqvayli
+
+Yufrar-d ger tmura
+
+
+Yal yiwen ad d-yettwali
+
+Taseddaṛt ɣef i nuli
+
+Nnig-s ur d-yekki kra
+
+
+Xas ma tikwal nγelli
+
+Werǧin i neḥvis tikli
+
+Nessawaḍ di tagara
+
+
+Iṭij seg i d-neflali
+
+Ass-a azekka ad nili
+
+Mi nezga nvedd i tnekra
+
+
+Nekni d aɣref n tlelli
+
+Nekni d tafat i tmuɣli
+
+Nekni d times d wuzzal
+
+
+Nekni d tamurt d igenni
+
+Nekni d agur d tziri
+
+Nekni d iseɣ d wazal
+
+
+Nekni d tiẓeṭ d tayri
+
+D talemmast akked yiri
+
+Nekni d illel d wakal
+
+
+Nezmer i tniri d teẓgi
+
+Afus ur yettergigi
+
+Γef talwit nezmer i ccwal
+
+
+Nekni d azref d isekkim
+
+Ger imeqranen ad neqqim
+
+Nekkni d tifrat d umtawi
+
+
+Nekni d afḍis d ugelzim
+
+Yeddan d tussna d uvelkim
+
+Fell-aɣ teḥṛes neɣ d llwi
+
+
+Isem-nneɣ d Aqvayli d afzim
+
+Γef unyir d Amaziɣ d urqim
+
+Fell-as lḥif ad d-t-nezwi
+
+
+Kkert ak° ad ɣ-id-twalim
+
+D nnuva-nneɣ ad ɣ-d-tezzim
+
+Ass-agi ad tt-id-nawi.
