*Empty MediaWiki Message*

--- a/Agdud.mw
+++ b/Agdud.mw
@@ -1,7 +1,7 @@
-'''{{Awalnut|Agdud|ccaɛb}}''' d agraw n yimdanen, wid ittxemmimen ad dukklen s kra n ṣṣifat, [[ddin|ajjed]] neɣ [[amezruy]], tameslayt neɣ idles.
+[[Tugna:HK_Ocean_Park_Audience.JPG|thumb|250px|AGDUD deg tzeɣɣa n [[amezgun|umezgun]]]]
 
-Lmeɛna nniḍen, di [[timettisent]], tesdukkel mačči d [[ahagar|ihagaren]].
+'''Agdud''' d agraw n [[afgan|yimdanen]], wid yettawin neɣ yettaɣen awal n kra n umahil d twuri i yezzin fell-asen. Deg waṭas n wakuden amahil-a yettili d [[addal]] neɣ d [[taẓuri]] neɣ d [[tira]], [[Amdan]] n ugdud d win yettilin seg kra n imrawen (10) am [[Astudiu n tiliẓri|istudyuten]] deg [[Tadwilt n tiliẓri|tedwilin n tiliẓri]] ar kra n timad (+100) am [[taẓallit]] deg [[tamezgida|tmezgida]] d [[tamezdayt (asɣan)|tamezdayt]] akken yezmer ad yugar aṭas n yigime (+1000) am [[timlilit|temliliyin]] n [[addal|waddal]] deg [[annar|inurar]]. Dɣa ikerwaten (imɛellmen) zemren ad gren imekcumen meqqren n [[idrumen|wedrim]] seg wegdud, Amedya s usenzi n [[tinigit|tnigiyin]] i wnekcum n wannar n temlilit 
 
-Lmeɛna tis tlata, di [[tasertit]], af [[aɣerfan|iɣerfanen]] n yiwen [[aɣlan|weɣlan]].
+== Ẓeṛ daɣen ==
 
 [[Taggayt:Tarakalt|g]]
