*Empty MediaWiki Message*

--- a/Agdud.mw
+++ b/Agdud.mw
@@ -1,6 +1,17 @@
 [[Tugna:HK_Ocean_Park_Audience.JPG|thumb|250px|AGDUD deg tzeɣɣa n [[amezgun|umezgun]]]]
 
-'''Agdud''' d agraw n [[afgan|yimdanen]], wid yettawin neɣ yettaɣen awal n kra n umahil d twuri i yezzin fell-asen. Deg waṭas n wakuden amahil-a yettili d [[addal]] neɣ d [[taẓuri]] neɣ d [[tira]], [[Amdan]] n ugdud d win yettilin seg kra n imrawen (10) am [[Astudiu n tiliẓri|istudyuten]] deg [[Tadwilt n tiliẓri|tedwilin n tiliẓri]] ar kra n timad (+100) am [[taẓallit]] deg [[tamezgida|tmezgida]] d [[tamezdayt (asɣan)|tamezdayt]] akken yezmer ad yugar aṭas n yigime (+1000) am [[timlilit|temliliyin]] n [[addal|waddal]] deg [[annar|inurar]]. Dɣa ikerwaten (imɛellmen) zemren ad gren imekcumen meqqren n [[idrumen|wedrim]] seg wegdud, Amedya s usenzi n [[tinigit|tnigiyin]] i wnekcum n wannar n temlilit 
+'''Agdud''' d agraw n [[afgan|yimdanen]], wid yettawin neɣ yettaɣen awal n kra n umahil d twuri i yezzin fell-asen. Deg waṭas n wakuden amahil-a yettili d [[addal]] neɣ d [[taẓuri]] neɣ d [[tira]], [[Amdan]] n ugdud d win yettilin seg kra n imrawen (10) am [[Astudiu n tiliẓri|istudyuten]] deg [[Tadwilt n tiliẓri|tedwilin n tiliẓri]] ar kra n timad (+100) am [[taẓallit]] deg [[tamezgida|tmezgida]] d [[tamezdayt (asɣan)|tamezdayt]] akken yezmer ad yugar aṭas n yigime (+1000) am [[timlilit|temliliyin]] n [[addal|waddal]] deg [[annar|inurar]]. Dɣa ikerwaten (imɛellmen) zemren ad gren imekcumen meqqren n [[idrumen|wedrim]] seg wegdud, Amedya s usenzi n [[tinigit|tnigiyin]] i wnekcum n wannar n temlilit
+
+== Amgarad gar n wegdud d weɣref ==
+'''Agdud''' <br/>
+* Yezmer ad yessdukkel aṭas n imdanen n [[idles|yidlsan]] d [[tutlayt|tutlayin]] yemgaraden deg tayri n yiwet n tɣawsa
+* Igmanen-is zmeren ad ilin udesen neɣ aggugen gugar-asen 
+* Ur d-tt-gin ara awanek neɣ [[timetti]] 
+
+'''Aɣref''' <br/>
+* Yezdi deg [[idles|yidles]] d [[tutlayt]] d [[amezruy|umezruy]] (deg yiwet deg-sent ma drus) 
+* Yettili deg yiwet n tmurt d uwanak
+* D win id yettgin [[awanak]] ibedden ɣef ayen yezdin igmanen-is
 
 == Ẓeṛ daɣen ==
 
