--- a/Tala_Ɛetman.mw
+++ b/Tala_Ɛetman.mw
@@ -17,8 +17,8 @@
 |Agmuḍ       =[[Jebla]] ([[At Wagnun]])
 |Anẓul-Agmuḍ =[[Tamda]] ([[At Wagnun]])
 |Anẓul       =Asif n Sibawu 
-|Anẓul-Amalu =[[Tazmalt Lkaf]] 
-|Amalu       =[[Tazmalt Lkaf]]
+|Anẓul-Amalu =[[Tazmalt]] 
+|Amalu       =[[Tazmalt]]
 |Agafa-Amalu =[[Aɛeṛqub n Tbarda]]
 }}
 
