/* Ayen i d-yezzin i Taddart n Tala Ɛetman: */ Tuccḍiwin yettwaseɣtan

--- a/Tala_Ɛetman.mw
+++ b/Tala_Ɛetman.mw
@@ -6,7 +6,7 @@
 * Ččalawaṭi d Jebla (Agafa-Asamar)
 * Tamda (Asamar)
 * Assif n Sibawu (Anẓul)
-* Tazmalt (Amalu)
+* Tazmalt n Tizi Wezzu (Amalu)
 * Aɛeṛqub n Tbarda  « Tiplakin » (Agafa-Amalu)
 
 {{Tuddar tinaragin
@@ -17,8 +17,8 @@
 |Agmuḍ       =[[Jebla]] ([[At Wagnun]])
 |Anẓul-Agmuḍ =[[Tamda]] ([[At Wagnun]])
 |Anẓul       =Asif n Sibawu 
-|Anẓul-Amalu =[[Tazmalt]] 
-|Amalu       =[[Tazmalt]]
+|Anẓul-Amalu = Tazmalt (n Tizi Wezzu) 
+|Amalu       = Tazmalt (n Tizi Wezzu)
 |Agafa-Amalu =[[Aɛeṛqub n Tbarda]]
 }}
 
