/* Amezruy */ Tuccḍiwin yettwaseɣtan

--- a/Tala_Ɛetman.mw
+++ b/Tala_Ɛetman.mw
@@ -37,13 +37,14 @@
 * Tazeqqa n tujya amaɣras Ɛliwat Belɛid
 
 == Amezruy ==
-*Uqbel timunent n Lezzayer :
+'''*Uqbel timunent n Lezzayer :'''
 
 Deg iseggasen n 30, Tala Ɛetman tella d taddart d tamecṭuḥt, tesɛa drus n imezdaɣ, Iɣil n Ufella, Tadukart d Lexmis llan d iɛeṛqyab, kera deg-sen tteẓẓun-ten ma d wiyiḍ kssen deg-sen lmal. 3(Kṛaḍ) n tisutwin(Générations) ɣer deffir, at taddart zedɣen ixxamen yebnan s walim d waluḍ, am ixxamen urkel n [[Tamurt n Iqbayliyen]], di lweqt-nni win yesɛan axxam d lɛali-t d win yebnan s weblaḍ akked uqeṛmud n leqbayel. Tudert ussan-nni tella qssiḥet mačči d kra.
 
-*Lawan n tegrawla :
+'''*Lawan n tegrawla :'''
 Lawan n tegrawla, tella-d yiwet n temlilit di [[Makuda]], i g-llan s ddaw n laɛnaya n lyuṭnu Amer Bessalaḥ, i wumi qqaṛen "El Bass", igensasen(Représentants) n temnaḍin n At [[Wagnun]] d Makuda llan deg temlilit-agi. Tala Ɛetman tceggeɛ Mass Mula Ali(Ali Wamer) akked Mass Benziyan Muḥemmed(Ṛebbaṭ). Ssin-agi ttewakelfen ad jemɛen isurdiyen d isufar nniḍen i Tirni Tesllullit Taɣennawt(FLN). Mass [[Aṛezqi Kaceṛ]] rran-t d aqeṛṛu ɣef umussu-agi, imir yefren(Yextaṛ) wid ara yilin deg umussu-agi : Gawa Ḥend, Benziyan Muḥemmed(Ṛebbaṭ), Ǧemɛa Akli, Amer Xeyaṛ, Certuḥa Aṛezqi, Geṭṭab Ali. Wigi ttewakelfen ad jemɛen tadrimt akked leslaḥ(Ibeckiḍen, Timeẓyanin...), amussu-agi yeḍmen isufar n wučči d teɣellist(Sécurité) n imenɣan(Imjuhad) ma ara mlilen, neɣ ma ara bedllen amekkan. Di tazwara n useggas 1955, Tala Ɛetman teṭṭef amekkan axatar(Important) deg Lwilaya tis 3, i d-yefkkan aṭṭas i waken ad d-tawi temurt n Lezzayer timunent-is(Independence).
-*Lawan n timunent :
+
+'''*Tallit n timunent :'''
 Akken kan tefra tegrawla, Lezzayer tewwi-d timunent-is, imezdaɣ bdan tteɛawaden lebni n taddart-nsen, ayen iwumi qqaren Abraḥ(Tala) yettwaxdem deg useggas n 1963. Leǧameɛ, d lebni i g-sɛan azal d ameqran di taddart, yettwabna ger 1979 d 1982 di tlemast n taddart, isem-is : Atman Ibn Ɛaffan.
 
 == Tafrayt n tejmaɛt n taddart 2011 ==
