*Empty MediaWiki Message*

--- a/Ass_n_Tlelli.mw
+++ b/Ass_n_Tlelli.mw
@@ -5,7 +5,7 @@
 
 D ass-a i d ass n tlelli
 
-D ass i deg aɣlan aqvayli
+D ass i deg aɣlan aqbayli
 
 Yufrar-d ger tmura
 
@@ -17,9 +17,9 @@ Taseddaṛt ɣef i nuli
 Nnig-s ur d-yekki kra
 
 
-Xas ma tikwal nγelli
+Xas ma tikwal nɣelli
 
-Werǧin i neḥvis tikli
+Werǧin i neḥbis tikli
 
 Nessawaḍ di tagara
 
@@ -28,7 +28,7 @@ Iṭij seg i d-neflali
 
 Ass-a azekka ad nili
 
-Mi nezga nvedd i tnekra
+Mi nezga nbedd i tnekra
 
 
 Nekni d aɣref n tlelli
@@ -56,7 +56,7 @@ Nezmer i tniri d teẓgi
 
 Afus ur yettergigi
 
-Γef talwit nezmer i ccwal
+Ɣef talwit nezmer i ccwal
 
 
 Nekni d azref d isekkim
@@ -68,20 +68,20 @@ Nekkni d tifrat d umtawi
 
 Nekni d afḍis d ugelzim
 
-Yeddan d tussna d uvelkim
+Yeddan d tussna d ubelkim
 
 Fell-aɣ teḥṛes neɣ d llwi
 
 
-Isem-nneɣ d Aqvayli d afzim
+Isem-nneɣ d Aqbayli d afzim
 
-Γef unyir d Amaziɣ d urqim
+Ɣef unyir d Amaziɣ d urqim
 
 Fell-as lḥif ad d-t-nezwi
 
 
 Kkert ak° ad ɣ-id-twalim
 
-D nnuva-nneɣ ad ɣ-d-tezzim
+D nnuba-nneɣ ad ɣ-d-tezzim
 
 Ass-agi ad tt-id-nawi.
