--- a/Asiɣaɣ.mw
+++ b/Asiɣaɣ.mw
@@ -2,6 +2,7 @@
 '''Asiɣaɣ''' neɣ '''Tizlemt''' neɣ '''Azemmar''' ('''[[Assaɣ ussnan]]''': ''Muraenidae'') d [[tawacult (tasnudert)|tawacult]] n [[islem|iselman]] yeṭṭafaren [[tafesna (tasnudert)|tafesna]] n [[asennur|tsennurin]], Dges azal n 200 n [[talmest|telmas]] yeẓẓunin (i ferqen) ɣef 16 n [[tawsit (tudersent)|tewsitin]]
 
 == Aglam ==
+Asiɣaɣ d [[aslem]] yettekkin deg udu-smil n [[tummidin yeɣsan]] yettwassnen d akken ur lint ara [[tasaccaft|tisuccaf]], Aglim-is d aleqqaq war ikeckaren, Tafekka n usiɣaɣ d tin igan am tfekka n [[asennur|usennur]]
 
 == Ideggan n tudert ==
 
