--- a/Amḍal_aɛrab.mw
+++ b/Amḍal_aɛrab.mw
@@ -3,6 +3,33 @@
 Deg wakud dgi [[Iɛraben|Iserɣinen]] ssexdamen iren n '''Tmurt taserɣint''', Timura n [[Turuft|Uruppa]] d [[Iwunak Yeddukklen n Temrikt|Iwunak Yedduklen n Marikan]] d waṭas n tmura n iden ssexdamen irem n '''Asamar alemmas d Tefriqt n ugafa''' i wakken ad sseɣlin fell-as aglam n [[timserɣent]] i wakken ad sdukklen-t dges tamurt n [[Israyel]] d [[aɣref]] n [[ikurdiyen]] 
 
 == [[timura tigmanin deg temɣunt Taserɣint|Timura tigmanin]] ==
+* '''[[Tazunegzirt Taserɣint]]''': <br/> 
+{{flag|Saudi Arabia}}
+{{flag|Yemen|[[Yamen]]}}
+{{flag|Ɛumman}}
+{{flag|Beḥrin}}
+{{flag|Limarat Taɛrabin Yeddukklen}}
+{{flag|Lekwit}}
+{{flag|Qatar}}
+
+* '''[[Tafriqt n Ugafa]]''': <br/>
 {{flag|Lezzayer}}
+{{flag|Sudan}}
+{{flag|Libya}}
+{{flag|Ameṛṛuk}}
+{{flag|Mauritania}}
+{{flag|Tunes}}
+{{flag|Egypt}}
+* '''[[Tafriqt n usamar|Asamar n Tefriqt]]''': <br/> 
+{{flag|Ṣumal}}
+{{flag|Jibuti}}
+{{flag|Comoros}}
+* '''[[Surya (tamnaṭ)]]''':
+{{flag|Urdun}}
+{{flag|Surya}}
+{{flag|Lubnan}}
+{{flag|Palestine}}
+* '''[[Agersafen]]''': <br/>
+{{flag|Iraq}}
 
 == Timura tigmanin ==
