*Empty MediaWiki Message*

--- a/Amḍal_aɛrab.mw
+++ b/Amḍal_aɛrab.mw
@@ -32,4 +32,14 @@ Deg wakud dgi [[Iɛraben|Iserɣinen]] ssexdamen iren n '''Tmurt taserɣint''', T
 * '''[[Agersafen]]''': <br/>
 {{flag|Iraq}}
 
-== Timura tigmanin ==
+== Imezdaɣ d tjumma ==
+
+== Amezruy ==
+
+== Tarakalt ==
+
+== Tasertit ==
+
+== Tadamsa ==
+
+== Ẓeṛ daɣen ==
