*Empty MediaWiki Message*

--- a/Aljiber.mw
+++ b/Aljiber.mw
@@ -12,7 +12,7 @@ D awal id yussan deg tutlayt n [[taɛrabt]] '''el-ǧabr'''(الجبر),
 '''Aljiber''' yettwa seqdec yakan deg akud n iferɛunen, snen ad'd affen tifrat i [[Tamesmatt|temesmatt]] (équation) s yiwet neɣ snat n tefesniwin.
 
 ===Amaḍal n waɛraben akk d yenselmen===
-[[Tugna:Image-Al-Kitāb_al-muḫtaṣar_fī_ḥisāb_al-ğabr_wa-l-muqābala.jpg|thumb|120px| Asebtar n ''Aljiber'' n [[Abu Ǧaɛfar Muḥemmed Ibn Musa al-Xuwarzmi|Xuwarzmi]]]]
+[[Tugna:Image-Al-Kitāb_al-muḫtaṣar_fī_ḥisāb_al-ğabr_wa-l-muqābala.jpg|thumb|120px|Asebter n ''Aljiber'' n [[Abu Ǧaɛfar Muḥemmed Ibn Musa al-Xuwarzmi|Xuwarzmi]]]]
 
 
 '''Aljiber''' yekk'd deg [[taɛrabt]] al-ǧabr, yuqal ''algebra'' s [[Talatinit|telatinit]], anamek is yezzi ugar ɣer '''Asdakkel'''(la reunion) n iceqqfan, neɣ '''tuqqna''' (la connexion). Akken daɣen ig wwi inumak(sens) nniḍen deg [[Tutlayt|tutlayin]] nniḍen.
