*Empty MediaWiki Message*

--- a/1949.mw
+++ b/1949.mw
@@ -1,4 +1,4 @@
-Asebtar agi, yella i assegwas '''1949''' n [[Tafada tagriguriant]].
+Asebter agi, yella i asseggas '''1949''' n [[Tafada tagriguriant]].
 
 == Tidyanin ==
 
