*Empty MediaWiki Message*

--- a/Tutlayt_tacelḥit.mw
+++ b/Tutlayt_tacelḥit.mw
@@ -111,7 +111,7 @@ Kra n imedyaten umgirred gar tcelḥit d teqbaylit :
 
  |}
 
-[[Tugna:MuhammadAwzal-Al Hawd-Leiden MS Or 23.354.jpg|thumb|300px|Asebter amezwaru n usefru aqdim s tcelḥit|alt=]]
+[[Tugna:MuhammadAwzal-Al Hawd-Leiden MS Or 23.354.jpg|thumb|300px|Asebter agejdan n usefru aqdim s tcelḥit|alt=]]
 
 == Tiwelhiwin ==
 {{refs}}
